# ado-workflows-mcp

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PUBLISHING.md
src/ado_workflows_mcp/: __init__.py  mcp_instance.py  server.py
src/ado_workflows_mcp/tools/: __init__.py  _fixup_forward_refs.py  _helpers.py  data_gathering.py  pr_comments.py  pr_context.py  pr_files.py  pr_identity.py  pr_lifecycle.py  pr_review.py  pull_requests.py  repo_content.py  repositories.py  repository_context.py  work_items.py
tests/: __init__.py  test_data_gathering.py  test_post_rich_comments.py  test_pr_batch_comments.py  test_pr_comments.py  test_pr_context.py  test_pr_files.py  test_pr_identity.py  test_pr_lifecycle.py  test_pr_review.py  test_pull_requests.py  test_repo_content.py  test_repositories.py  test_repository_context.py  test_server.py  test_work_items.py
